--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,7 @@
 build: false
 
 environment:
-    PYTHON: "C:\\Python27"
-    PYTHON_VERSION: "2.7.8"
-    PYTHON_ARCH: "32"
+    PYTHON: "C:\\Python37"
 
     matrix:
         - MINGW_CONFIGURATIONS: '4.9@x86_64@seh@posix'
@@ -16,7 +14,7 @@ environment:
           CONAN_BASH_PATH: "c:\\msys64\\usr\\bin\\bash"
 
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/
+  - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools bincrafters_package_tools
   - conan user # It creates the conan data directory
