--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,13 @@ jobs:
   - script: |
       pip install --upgrade pip
       pip install conan --upgrade
-      pip install conan_package_tools bincrafters_package_tools
+      pip install conan_package_tools
       conan user
       python build.py
     env:
+      CONAN_USERNAME: $(CONAN_USERNAME)
+      CONAN_CHANNEL: "testing"
+      CONAN_UPLOAD: $(CONAN_UPLOAD)
       CONAN_LOGIN_USERNAME: $(CONAN_LOGIN_USERNAME)
       CONAN_PASSWORD: $(CONAN_PASSWORD)
   strategy:
