Changed build configurations

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,4 +25,5 @@ jobs:
     matrix:
       MSVC16:
         CONAN_VISUAL_VERSIONS: 16
+        CONAN_BUILD_TYPES: Release,Debug
         CONAN_ARCHS: "x86_64"
